# nba_alpha_prop

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  railway.json
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
db/migrations/: env.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx  providers.tsx
notebooks/: explore_shuf.ipynb  notebook_notes.md
